[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ui/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Ui/ButtonTexture/Paused-Hover.png" type="Texture" id=2]
[ext_resource path="res://Ui/ButtonTexture/Paused.png" type="Texture" id=3]
[ext_resource path="res://Ui/ButtonTexture/Options.png" type="Texture" id=4]
[ext_resource path="res://Ui/ButtonTexture/Resume.png" type="Texture" id=5]
[ext_resource path="res://Ui/ButtonTexture/Exit.png" type="Texture" id=6]
[ext_resource path="res://Ui/ButtonTexture/Options-Hover.png" type="Texture" id=7]
[ext_resource path="res://Ui/ButtonTexture/Exit-Hover.png" type="Texture" id=8]
[ext_resource path="res://Ui/ButtonTexture/Resume-Hover.png" type="Texture" id=9]

[node name="Menu" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="TextureButton" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.707
margin_top = 83.2609
margin_right = 146.293
margin_bottom = 194.261
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="Paused"]
pause_mode = 2
margin_left = 50.0
margin_top = 111.0
margin_right = 230.0
margin_bottom = 188.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Paused"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.2929
margin_top = 122.739
margin_right = 82.7071
margin_bottom = 199.739
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Paused"]
pause_mode = 2
margin_left = 72.5858
margin_top = 245.411
margin_right = 183.586
margin_bottom = 322.411
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Paused/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Paused/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Paused/Exit" to="." method="_on_Exit_pressed"]
